# ffdcaenc-2

./: AUTHORS  COMPILE.TXT  DECODING_ISSUES.TXT  HISTORY.TXT  Makefile.am  NEWS  README.md  README2.TXT  alsaplugin.c  compiler_info.h  configure.ac  ffdcaenc.c  ffdcaenc.h  ffdcaenc_private.h  gentables.c  int_data.h  main.c  math_tables.c  math_tables.h  uncommon-channel-layouts.TXT  wavfile.c  wavfile.h  xgetopt.c  xgetopt.h
